--- a/src/main/resources/freemarker.properties
+++ b/src/main/resources/freemarker.properties
@@ -1,15 +1,12 @@
 datetime_format=yyyy-MM-dd HH:mm:ss
 date_format=yyyy-MM-dd
 time_format=HH:mm:ss
-number_fromat=0.##;
-
+number_format=0.##;
 boolean_format=true,false
-
 locale=zh_CN
-
 whitespace_stripping=true
 default_encoding=UTF-8
-
 tag_syntax=auto_detect
-
 url_escaping_charset=UTF-8
+auto_import="common.ftl" as c
+template_exception_handler=rethrow
